# CYDF311-S24-uallsyms

./: .gitignore  Make_global.am  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: build.yml
docs/: kallsyms.md  presentation.md
examples/: .gitignore
examples/damn-vulnerable-module/: README.md  pack-initramfs.sh  run.sh
examples/damn-vulnerable-module/exploits/exploit-6.6.21/: Makefile  exploit.c
examples/damn-vulnerable-module/exploits/exploit-uallsyms/: Makefile  exploit.c
examples/damn-vulnerable-module/initramfs/: dvm.ko
examples/damn-vulnerable-module/initramfs/etc/init.d/: rcS
examples/damn-vulnerable-module/src/: Makefile  dvm.c  dvm.h  dvm.ko
include/: Makefile.am
include/uallsyms/: Makefile.am  types.h  uallsyms.h
src/: Makefile.am  libuallsyms.map  uallsyms.c  uallsyms.h  uname.c
src/arch/: x86_64.c  x86_64.h
src/arch/x86_64/: kbase.c  kbase.h
src/kallsyms/: core.c  core.h
src/kinfo/: kconfig.c  uname.c  uname.h
src/resolver/: canary.c  canary.h  gadget.c  gadget.h
src/utils/: log.c  log.h
