#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([libuallsyms], [1.0.0-beta0])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_PROG_CC
AC_TYPE_SIZE_T
LT_INIT

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 include/uallsyms/Makefile
                 src/Makefile])

AC_OUTPUT
